# ld-node-facial-landmark-detector-2

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  instance.json  specification.json  uv_kpt_ind.txt
conda-recipe/: bld.bat  build.sh  conda_build_config_linux-aarch64.yaml  conda_build_config_linux-x86-64.yaml  conda_build_config_win-x86-64.yaml  meta.yaml
data/: ImageWithBB.fbs  ImageWithBoundingBoxes.fbs  data.fbs
src/: FaceTransform.cpp  FaceTransform.h  FacialLandmarkDetector.cpp  FacialLandmarkDetector.h  LandmarkPredictor.cpp  LandmarkPredictor.h  main.cpp
